--- a/index.html
+++ b/index.html
@@ -5,14 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Vitor Schapieski</title>
-    <link rel="shortcut icon" href="/images/abstract-geometric-wavy-folds-background.jpg">
+   
 </head>
 <body>
-    
+    <nav>
+        <a class="inicio">Redes</a>
+        <a class="quemSouEu">Quem é Vitor?</a>
+        <a class="projetos">Projetos</a>
+    </nav>
+    <div class="conteinerInicio">
+        <div class="pageInicio">
+            <p>oi</p>
+        </div>
+    </div>
+    <div class="conteinerQuem">
+        <div class="pageQuem">
+
+            <img src="./images/117263508_3162919623795508_6951036941382136148_n.jpg" alt="">
+           <h1>Oi, eu vou o Vitor! :D</h1>
+           <p>Descobri a programação já velhinho, com 26 anos, mas aos 13, vivia criando sites em html basico, me achava um máximo. <br> Hoje estudo programação web, mais voltado a frontend, pois adoro estilo, armonia, designer </p> 
+
+        </div>
+    </div>
+    <div class="conteinerProjetos">
+        <div class="pageProjetos">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est saepe officiis rem sit, commodi eligendi laudantium. Unde doloremque quam qui vitae, consectetur perspiciatis doloribus facere earum culpa deserunt id in?</p>
+        </div>
+    </div>
 
 
 
-
-<script src="/script.js"></script>    
+<script src="/scripts/script.js"></script>    
 </body>
 </html>
