--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     </nav>
     <div class="conteinerInicio">
         <div class="pageInicio">
-            <p>oi</p>
+            <h1>Não uso muito as redes para postar, mas se quiser me ver...</h1>
+            <a href="https://www.linkedin.com/in/vitor-schapieski-bbb6951b7/">Linkedin</a>
+            <a href="https://www.instagram.com/vitorschapieski/">Instagran</a>
+            <img src="./images/132564735_3552726684814798_7035567835055693739_n.jpg" alt="">
         </div>
     </div>
     <div class="conteinerQuem">
         <div class="pageQuem">
 
-            <img src="./images/117263508_3162919623795508_6951036941382136148_n.jpg" alt="">
+            <img src="./images/132564735_3552726684814798_7035567835055693739_n.jpg" alt="">
            <h1>Oi, eu vou o Vitor! :D</h1>
-           <p>Descobri a programação já velhinho, com 26 anos, mas aos 13, vivia criando sites em html basico, me achava um máximo. <br> Hoje estudo programação web, mais voltado a frontend, pois adoro estilo, armonia, designer </p> 
+           <p>Descobri a programação já velhinho, com 26 anos, mas aos 13, vivia criando sites em html basico, me achava um máximo. <br> Hoje estudo programação web, mais voltado a frontend, pois adoro estilo, armonia, designer </p>
 
         </div>
     </div>
@@ -35,6 +38,6 @@
 
 
 
-<script src="/scripts/script.js"></script>    
+<script src="./scripts/script.js"></script>    
 </body>
 </html>
