--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <label>"Viu a necessidade? Atenda!"</label>
         <label>Grande Soldador</label>
         <div class="redes">
-            <a href=""><img src="./images/github.png" alt=""></a>
-            <a href=""><img src="./images/linkedin.png" alt=""></a>
-            <a href=""><img src="./images/instagram.png" alt=""></a>
+            <a href="https://github.com/vitorschapieski"><img src="./images/github.png" alt=""></a>
+            <a href="http://www.linkedin.com/vitor-schapieski"><img src="./images/linkedin.png" alt=""></a>
+            <a href="http://www.instagram.com/vitorschapieski"><img src="./images/instagram.png" alt=""></a>
         </div>
 
     </section>
