--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="left">
         <a href="./index.html"><img class="photo" src="./images/photo.jpg" alt=""></a>
         <h2>Vitor Schapieski</h2>
-        <h4>Desenvolvedor de aplicações web</h4>
+        <h4>Desenvolvedor Jr de aplicações web</h4>
         <label>"Viu a necessidade? Atenda!"</label>
         <label>Grande Soldador</label>
         <div class="redes">
