--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="left">
-        <a href="./index.html"><img class="photo" src="./images/photo.jpg" alt=""></a>
+        <img class="photo" src="./images/photo.jpg" alt="">
         <h2>Vitor Schapieski</h2>
         <h4>Desenvolvedor Jr de aplicações web</h4>
         <label>"Viu a necessidade? Atenda!"</label>
@@ -38,5 +38,8 @@
        
         
     </section>
+
+    <img class="modal" src="./images/photo.jpg" alt="">
+
 </body>
 </html>
