--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Vitor Schapieski</title>
 </head>
 <body>
+    
     <section class="left">
         <img class="photo" src="./images/photo.jpg" alt="">
         <h2>Vitor Schapieski</h2>
@@ -19,7 +20,15 @@
             <a href="http://www.linkedin.com/vitor-schapieski"><img src="./images/linkedin.png" alt=""></a>
             <a href="http://www.instagram.com/vitorschapieski"><img src="./images/instagram.png" alt=""></a>
         </div>
+        <div class="photos">
+            <img class="miniPhotos" src="./images/photo1.jpg" alt="">
+            <img class="miniPhotos" src="./images/photo2.jpg" alt="">
+            <img class="miniPhotos" src="./images/photo3.jpg" alt="">
+            <img class="miniPhotos" src="./images/photo4.jpg" alt="">
+            <img class="miniPhotos" src="./images/photo5.jpg" alt="">
+            <img class="miniPhotos" src="./images/photo6.jpg" alt="">
 
+        </div>
     </section>
     <main>
         <div class="postsCard">
@@ -39,7 +48,27 @@
         
     </section>
 
-    <img class="modal" src="./images/photo.jpg" alt="">
+    <div class="modal">
+        <span class="fechar">Fechar</span>
+        <label>Boas Memórias</label>
+        <div class="modalPage">
+            <img src="./images/photo1.jpg" alt="">
+            <img src="./images/photo2.jpg" alt="">
+            <img src="./images/photo3.jpg" alt="">
+            <img src="./images/photo4.jpg" alt="">
+            <img src="./images/photo5.jpg" alt="">
+            <img src="./images/photo6.jpg" alt="">
+            <img src="./images/photo7.jpg" alt="">
+            <img src="./images/photo8.jpg" alt="">
+            <img src="./images/photo9.jpg" alt="">
+            <img src="./images/photo10.jpg" alt="">
+            <img src="./images/photo11.jpg" alt="">
+            <img src="./images/photo12.jpg" alt="">
+            <img src="./images/photo13.jpg" alt="">
+            <img src="./images/photo14.jpg" alt="">
 
+        </div>
+    </div>
+    <script src="./javascript/script.js"></script>
 </body>
 </html>
