--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             <h6>16-07-2022</h6>
             <p>Quando meu irmão ganhou seu primeiro computador, eram contadas as horas que podia ficar nele, e minha infância não foi das melhores. Bullyng, religião, sexualidade, isso tudo fez eu não ter a infâcia "perfeita", mas quando sentava na cadeira e podia estar no meu orkut, editando sites em html, isso me permitia ser quem eu era. Quando me era tirado aquele horário, era como se uma parte de mim tivesse sido desliga, pois eu nunca ousei mostrar oque eu sentia ao mundo, isso mudou muito após um tempo, mas agora que posso desenvolver, me envolvo ao máximo em tudo, dedico meu melhor, se não sei algo, eu vou saber.</p><p>Amo programar, seja em valina (html, css e javascript) ou algum framework, gosto mais dos que me dão a liberdade de fazer tudo com minha criatividade e paixão, prefiro me envolver com o código, ao pegar coisas usados e desenvoldidas por outros! Aqui vai um adendo, odeio bootstrap</p>
         </div>
+        <div class="postsCard">
+            <h2>Oque sabe fazer?</h2>
+            <h6>17-07-2022  -  00:58</h6>
+            <p>Bem, atualmente, oque eu me garanto a fazer bem feito, é relacionado a html, css, javascript e gid. Estou estudando NodeJs, React (isso inclui styled componets e sass), ExpressJs, mongodb, MYSQL. Tenho pleno dominio de photoshop, e sei editar muito bem videos pelo cantasia, ja tentei pelo premmier mas prefiro o cantasia, ate quiz ser youtuber, mas nao funciona comigo! :D
+            </p>
+            <p>Amo ensinar, demonstrar, ilustrar, passar conhecimento e adquirir. Gosto muito de ficar em casa só no pc o dia todo, mas tambem curto muito a boa companhia de alguem com bons assuntos, quanto mais humorado e saber ser sério na hora certa melhor!</p>
+        </div>
         
     </main>
     <section class="right">
