--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         <div class="postsCard">
             <h2>Oque sabe fazer?</h2>
             <h6>17-07-2022  -  00:58</h6>
-            <p>Bem, atualmente, oque eu me garanto a fazer bem feito, é relacionado a html, css, javascript e gid. Estou estudando NodeJs, React (isso inclui styled componets e sass), ExpressJs, mongodb, MYSQL. Tenho pleno dominio de photoshop, e sei editar muito bem videos pelo cantasia, ja tentei pelo premmier mas prefiro o cantasia, ate quiz ser youtuber, mas nao funciona comigo! :D
+            <p>Bem, atualmente, oque eu me garanto a fazer bem feito, é relacionado a html, css, javascript e git. Estou estudando NodeJs, React (isso inclui styled componets e sass), ExpressJs, mongodb, MYSQL. Tenho pleno dominio de photoshop, e sei editar muito bem videos pelo cantasia, ja tentei pelo premmier mas prefiro o cantasia, ate quiz ser youtuber, mas nao funciona comigo! :D
             </p>
             <p>Amo ensinar, demonstrar, ilustrar, passar conhecimento e adquirir. Gosto muito de ficar em casa só no pc o dia todo, mas tambem curto muito a boa companhia de alguem com bons assuntos, quanto mais humorado e saber ser sério na hora certa melhor!</p>
+            <p>Já fui tatuador(dos ruis), manicuri, já limpei casa como doméstico, ajudante de atêlie e costureiro, pintor de paredes, tenho até umas obras de arte espalhadas por ae, mas nada me encantou mais que programar!</p>
         </div>
         
     </main>
