--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@
     </section>
     <main>
         <div class="postsCard">
-            <h2>Quem é Vitor?</h2>
-            <h6>16-07-2022</h6>
-            <p>Bom, ele é uma pessoa <strong>criativa</strong>, as vezes um pouco demais que chega irritar outras, mas não é nada pessoal, é a forma dele vêr o mundo! Tem <strong>soluções</strong> um tando malucas quando é para resolver coisas, oque importa é que no fim funciona :D. Passa horas em frente ao computador tentando aprender como resolver aquele bugzinho chato, sabe? E o principal fator é que ele <strong>NUNCA DESISTE</strong> do que quer! Por ter um olhar de artista, e vêr o mundo de forma diferente, esta sempre atendo aos detalhes que podem fazer toda diferença. Consegue <strong>organizar</strong> ate os maiores emaranhados que podem existir, organizar da prazer a ele, pode se dizer que é um asmr. <strong>Grandes sistemas de login, formularios detalhados, organização em banco de dados, tabelas, ordem, produtividade,</strong> tudo isso é formado em sua mente na mesma hora que falam em dados com ele. Tem pensamentos visuais, e consegue com maestria trazer para seus trabalhos oque pensa.</p>
-        </div>
-        <div class="postsCard">
-            <h2>Porque gosta de Programação?</h2>
-            <h6>16-07-2022</h6>
-            <p>Quando meu irmão ganhou seu primeiro computador, eram contadas as horas que podia ficar nele, e minha infância não foi das melhores. Bullyng, religião, sexualidade, isso tudo fez eu não ter a infâcia "perfeita", mas quando sentava na cadeira e podia estar no meu orkut, editando sites em html, isso me permitia ser quem eu era. Quando me era tirado aquele horário, era como se uma parte de mim tivesse sido desliga, pois eu nunca ousei mostrar oque eu sentia ao mundo, isso mudou muito após um tempo, mas agora que posso desenvolver, me envolvo ao máximo em tudo, dedico meu melhor, se não sei algo, eu vou saber.</p><p>Amo programar, seja em valina (html, css e javascript) ou algum framework, gosto mais dos que me dão a liberdade de fazer tudo com minha criatividade e paixão, prefiro me envolver com o código, ao pegar coisas usados e desenvoldidas por outros! Aqui vai um adendo, odeio bootstrap</p>
+            <h2>Quanto tempo estudo para fazer este blog?</h2>
+            <h6>20-07-2022  -  22:39</h6>
+            <p>Tres meses, basicamente isso! Em uma conversa com um amigo madrugada dentro sobre programação, e nisso vimos a data que começamos a estudar (18-04-22), antes disso, nao tinhamos conhecimento de programação. Estudando madrugadas, fins de semanas, feriados, deixando de fazer qualquer coisa para estudar. Mas ae vem a pergunta..."Será que eu gosto de programar?" Sim! Até hoje, só senti extase em duas situaçoes, programando e a melhor que programar, é falando com Jesus!
+            </p>
+
         </div>
         <div class="postsCard">
             <h2>Oque sabe fazer?</h2>
@@ -49,6 +46,19 @@
             <p>Amo ensinar, demonstrar, ilustrar, passar conhecimento e adquirir. Gosto muito de ficar em casa só no pc o dia todo, mas tambem curto muito a boa companhia de alguem com bons assuntos, quanto mais humorado e saber ser sério na hora certa melhor!</p>
             <p>Já fui tatuador(dos ruis), manicuri, já limpei casa como doméstico, ajudante de atêlie e costureiro, pintor de paredes, tenho até umas obras de arte espalhadas por ae, mas nada me encantou mais que programar!</p>
         </div>
+        <div class="postsCard">
+            <h2>Porque gosta de Programação?</h2>
+            <h6>16-07-2022</h6>
+            <p>Quando meu irmão ganhou seu primeiro computador, eram contadas as horas que podia ficar nele, e minha infância não foi das melhores. Bullyng, religião, sexualidade, isso tudo fez eu não ter a infâcia "perfeita", mas quando sentava na cadeira e podia estar no meu orkut, editando sites em html, isso me permitia ser quem eu era. Quando me era tirado aquele horário, era como se uma parte de mim tivesse sido desliga, pois eu nunca ousei mostrar oque eu sentia ao mundo, isso mudou muito após um tempo, mas agora que posso desenvolver, me envolvo ao máximo em tudo, dedico meu melhor, se não sei algo, eu vou saber.</p><p>Amo programar, seja em valina (html, css e javascript) ou algum framework, gosto mais dos que me dão a liberdade de fazer tudo com minha criatividade e paixão, prefiro me envolver com o código, ao pegar coisas usados e desenvoldidas por outros! Aqui vai um adendo, odeio bootstrap</p>
+        </div>
+        <div class="postsCard">
+            <h2>Quem é Vitor?</h2>
+            <h6>16-07-2022</h6>
+            <p>Bom, ele é uma pessoa <strong>criativa</strong>, as vezes um pouco demais que chega irritar outras, mas não é nada pessoal, é a forma dele vêr o mundo! Tem <strong>soluções</strong> um tando malucas quando é para resolver coisas, oque importa é que no fim funciona :D. Passa horas em frente ao computador tentando aprender como resolver aquele bugzinho chato, sabe? E o principal fator é que ele <strong>NUNCA DESISTE</strong> do que quer! Por ter um olhar de artista, e vêr o mundo de forma diferente, esta sempre atendo aos detalhes que podem fazer toda diferença. Consegue <strong>organizar</strong> ate os maiores emaranhados que podem existir, organizar da prazer a ele, pode se dizer que é um asmr. <strong>Grandes sistemas de login, formularios detalhados, organização em banco de dados, tabelas, ordem, produtividade,</strong> tudo isso é formado em sua mente na mesma hora que falam em dados com ele. Tem pensamentos visuais, e consegue com maestria trazer para seus trabalhos oque pensa.</p>
+        </div>
+
+
+
         
     </main>
     <section class="right">
